# lex-analytics

./: cdk.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: 2025-06-10-pamphlet_bot.csv  readme.md
infastructure/: app.py  config.py  project_stack.py
infastructure/util/: create_lambda.py  get_project_meta.py
lambdas/initializer/: index.py
lambdas/processor/: index.py
lex_analytics/: lex_analytics_stack.py
tests/lambdas/initializer/: test_index.py
tests/lambdas/processor/: test_index.py
tests/unit/: test_lex_analytics_stack.py
